# blockbuster

./: .gitignore  .travis.yml  Makefile  README.md  pyproject.toml  pytest.ini  tox.ini
.bento/: config.yml
.github/workflows/: bento.yml  coverage.yml  lint.yml  tests.yml
blockbuster/: manage.py
blockbuster/blockbuster/: __init__.py  asgi.py  middleware.py  settings.py  urls.py  wsgi.py
blockbuster/blockbuster/settings/: base.py  dev.py  pro.py  test.py
blockbuster/blockbuster/tests/: __init__.py  test_acceptance.py  test_middleware.py  test_unit.py
blockbuster/movies/: __init__.py  apps.py  urls.py  views.py
blockbuster/movies/application/: __init__.py  services.py  transformers.py  use_cases.py
blockbuster/movies/domain/: __init__.py  models.py  repositories.py  services.py
blockbuster/movies/infrastructure/: __init__.py  clients.py  decorators.py  repositories.py
blockbuster/movies/tests/: movies_test_cases.py  stub.py  test_behaviour.py  test_cases.py  test_infrastructure.py  test_unit.py
blockbuster/movies/tests/acceptance/: test_get_movies.py
blockbuster/movies/tests/behaviour/: test_get_movies.py
blockbuster/movies/tests/infrastructure/: movies.json  people.json  test_clients.py
blockbuster/movies/tests/stub/: models.py
blockbuster/movies/tests/unit/: test_decorators.py  test_movie_repository.py
tests/: test_blockbuster.py
