[tool.poetry]
name = "blockbuster"
version = "0.1.0"
description = ""
authors = ["Hernán Kleiman <hernan.kleiman@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.5"
requests = "^2.23.0"
flake8 = "^3.7.9"
pep8-naming = "^0.10.0"
flake8-debugger = "^3.2.1"
mypy = "^0.770"
bento-cli = "^0.10.2"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
